# convnextnnqs

./: .gitignore  README.md  clean.sh  install.sh  pyproject.toml  test.ipynb
data/: compute_flops.ipynb  load_trained.ipynb  optimizations.ipynb  paper.mplstyle  plots.ipynb
data/files/L6/2x2/1/: sbatch0.sh  sbatch1.sh  sbatch10.sh  sbatch11.sh  sbatch2.sh  sbatch3.sh  sbatch4.sh  sbatch5.sh  sbatch6.sh  sbatch7.sh  sbatch8.sh  sbatch9.sh
data/files/L6/3x3/1/: sbatch0.sh  sbatch1.sh  sbatch2.sh  sbatch3.sh  sbatch4.sh  sbatch5.sh  (+3 more)
deepnets/: pyproject.toml
deepnets/callbacks/: __init__.py  save_vstate.py  savers.py
deepnets/config/: processes.py
deepnets/data/: load.py
deepnets/deepnets/data/: load.py
deepnets/deepnets/net/: wrappers.py
deepnets/deepnets/net/ConvNext/: encoder.py  example.ipynb  heads.py  net.py  stems.py
deepnets/deepnets/nn/blocks/: convnext_utils.py
deepnets/deepnets/optimization/: utils.py
deepnets/deepnets/system/: __init__.py  base.py  system.py
deepnets/deepnets/utils/: serialize.py
deepnets/expectation_value/: expectation_value.py
deepnets/net/: __init__.py  example.ipynb  example_convnext.py  patches.py  wrappers.py
deepnets/net/ConvNext/: __init__.py  encoder.py  heads.py  net.py
deepnets/optimization/: example.ipynb  protocols.py  save_load.py
deepnets/scripts/: example_config_expvalues.yaml  example_config_optimization.yaml
deepnets/system/: __init__.py  system.py
examples/: convnext_init.py  convnext_simple_optimization.py  optimization.py
scripts/: config_opt.yaml  run_expvalues.py  run_optimization.py
(+957 files in other folders)
